--- a/src/Pages/SignupPage/Signup.css
+++ b/src/Pages/SignupPage/Signup.css
@@ -35,6 +35,19 @@
     justify-content: center;
     padding-bottom: 2vh;
   }
+  .wlcin{
+    color: #639;
+    height: 4rem;
+    letter-spacing: 0;
+    line-height: 1.175;
+    font-weight: 600;
+    font-size: 1.4rem;
+    font-family: Roboto, sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 2vh;
+  }
   
   .signup {
     color: #639;
