--- a/Client/src/Component/Buy.css
+++ b/Client/src/Component/Buy.css
@@ -1,3 +1,8 @@
+.buycont{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .buyform {
     display: flex;
     flex-direction: column;
@@ -10,34 +15,19 @@
     color: #fff;
     border: 1px solid #333;
   }
-  .buyform  .signin {
-    font-size: 14.5px;
-    color: rgba(255, 255, 255, 0.7);
-  }
-  
-  .buyform .signin {
-    text-align: center;
-  }
-  
-  .buyform  .signin a:hover {
-    text-decoration: underline #639;
-  }
-  
-  .buyform .signin a {
-    color: #639;
-  }
-  
   .buyform .flex {
     display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     gap: 6px;
   }
   
   .buyform .form label {
-    position: relative;
+      position: relative;
   }
   
-  .buyform  .form label .input {
+.buyform label .input {
     background-color: #333;
     color: #fff;
     width: 100%;
@@ -47,8 +37,8 @@
     border-radius: 10px;
   }
   
-  .buyform .form label .input + span {
-    color: rgba(255, 255, 255, 0.5);
+  .buyform label .input + span {
+    color: #639;
     position: absolute;
     left: 10px;
     top: 0px;
@@ -57,13 +47,13 @@
     transition: 0.3s ease;
   }
   
-  .buyform  .form label .input:placeholder-shown + span {
-    top: 12.5px;
-    font-size: 0.9em;
-  }
-  
-  .buyform .form label .input:focus + span,
-  .buyform .form label .input:valid + span {
+  .buyform label .input:placeholder-shown + span {
+      top: 12.5px;
+      font-size: 0.9em;
+    }
+    
+    .buyform label .input:focus + span,
+    .buyform label .input:valid + span {
     color: #639;
     top: 0px;
     font-size: 0.7em;
@@ -79,15 +69,14 @@
       from {
           transform: scale(0.9);
           opacity: 1;
-    }
+        }
     
     to {
         transform: scale(1.8);
         opacity: 0;
     }
 } 
-
-/* .payments .details {
+.payments .details {
     display: grid;
     grid-template-columns: 10fr 1fr;
     padding: 0px;
@@ -97,18 +86,37 @@
   .payments .details span:nth-child(odd) {
     font-size: 12px;
     font-weight: 600;
-    color: #000000;
+    color: #639;
     margin: auto auto auto 0;
   }
   
   .payments .details span:nth-child(even) {
     font-size: 13px;
     font-weight: 600;
-    color: #000000;
+    color: #639;
     margin: auto 0 auto auto;
   }
-  
-  .checkout .footer {
+
+/* .buyform  .signin {
+  font-size: 14.5px;
+  color: rgba(255, 255, 255, 0.7);
+}
+
+.buyform .signin {
+  text-align: center;
+}
+
+.buyform  .signin a:hover {
+  text-decoration: underline #639;
+}
+
+.buyform .signin a {
+  color: #639;
+}
+ */
+
+ 
+  /* .checkout .footer {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -121,9 +129,9 @@
     font-size: 22px;
     color: #2B2B2F;
     font-weight: 900;
-  }
+  } */
   
-  .checkout .checkout-btn {
+  /* .checkout .checkout-btn {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -140,7 +148,7 @@
     font-size: 13px;
     font-weight: 600;
     transition: all 0.3s cubic-bezier(0.15, 0.83, 0.66, 1);
-  } */
+  }  */
 
 
 /* .submit {
