--- a/Client/src/Pages/SignupPage/Signup.css
+++ b/Client/src/Pages/SignupPage/Signup.css
@@ -4,36 +4,51 @@
 }
 .container{
   display: flex;
-  justify-content: center;
-  align-items: center;
-  background: black;
+  justify-content: space-between;
+  /* align-items: center; */
+  background: #f2f2f2;
   height: 100vh;
 }
+#signupimg{
+  width: 30%;
+  height: 100%;
+}
+#signupimg img{
+  width: 100%;
+  height: 100%;
+}
+.formcont{
+  width: 70%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+}
 .form {
-    background-color: rgb(15, 15, 15);
-    padding:  3.125em;
+    background:#f2f2f2;
+    padding:  2.125em;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     border: 2px solid transparent;
-    background: linear-gradient(#212121, #212121) padding-box,
-              linear-gradient(145deg, transparent 35%,#e81cff, #40c9ff) border-box;
     align-items: center;
-    box-shadow: 5px 5px 15px -1px rgba(0,0,0,0.75);
-    height: 60%;
+    height: 87%;
+    /* background: linear-gradient(#212121, #212121) padding-box, */
+              /* linear-gradient(145deg, transparent 35%,#e81cff, #40c9ff) border-box; */
+    /* box-shadow: 3px 3px 10px -1px rgba(0,0,0,0.75); */
+    /* width: 50%; */
   }
   .wlc{
     color: #639;
-    height: 7rem;
+    height: 4rem;
     letter-spacing: 0;
-    line-height: 1.375;
+    line-height: 1.175;
     font-weight: 600;
-    font-size: 1.9rem;
+    font-size: 1.6rem;
     font-family: Roboto, sans-serif;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-bottom: 2vh;
+    /* padding-bottom: 2vh; */
   }
   .wlcin{
     color: #639;
@@ -46,41 +61,34 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-bottom: 2vh;
+    /* padding-bottom: 2vh; */
   }
   
   .signup {
     color: #639;
-    text-transform: uppercase;
-    letter-spacing: 2px;
+    /* text-transform: uppercase; */
+    /* letter-spacing: 0.5px; */
     display: block;
     font-weight: bold;
-    font-size: x-large;
-    margin-bottom: 0.5em;
+    font-size: 1rem;
+    margin-bottom: 1em;
   }
   
   .form--input {
-    border: 1.5px dotted #639;
+    border: 1px solid #639;
     outline: none;
   /* outline: 0; */
-  color: whitesmoke;
+  color: black;
   font-weight: 400;
   font-size: .9rem;
   line-height: 1.25rem;
   padding: 0.75rem;
   background-color: transparent;
   border-radius: .375rem;
-  margin-bottom: 0.5em;
+  margin-bottom: 1em;
   width: 100%;
   height: 40px;
   border-radius: 5px;
-    /* width: 100%;
-    height: 40px;
-    border: 1px solid #639;
-    padding: 0.8em;
-    font-family: 'Inter', sans-serif;
-    background-color: rgb(15, 15, 15); */
-    /* padding-bottom: 4vh; */
   }
   
   .form--input:focus {
@@ -110,16 +118,17 @@
     width: 50%;
     padding: 0.625em;
     border-radius: 5px;
-    color: #639;
-    background-color: rgb(12, 12, 12);
+    margin-bottom: 2vh;
+    color: white;
+    background-image: linear-gradient(to top right,#212121,#639);
     border: 1px dashed #639;
     cursor: pointer;
   }
   
   .form--submit:hover {
     color: white;
-    background-color: #639;
+    background-image: linear-gradient(to top right,#639,#212121);
     border: 1px dashed #639;
     cursor: pointer;
-    transition: 0.5s;
+    transition: 1s;
   }
