--- a/Client/src/Pages/LandingPage/Landing.css
+++ b/Client/src/Pages/LandingPage/Landing.css
@@ -1,326 +1,321 @@
-.landingcont{
-    display: flex;
-    flex-direction: column;
-    /* width: 100; */
+.landingcont {
+  display: flex;
+  flex-direction: column;
+  /* width: 100; */
 }
-.landtxt1{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    margin-top: 9vh;
-    /* border: 1px solid black; */
+.landtxt1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin-top: 9vh;
+  /* border: 1px solid black; */
 }
-#landtxt1i{
-    /* border: 1px solid black; */
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: #639;
+#landtxt1i {
+  /* border: 1px solid black; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #639;
 }
-#landtxt1i h1{
-    text-align: center;
-    color: #513173;
-    font-family: Inter;
-    font-size: 47.89px;
-    font-weight: 700;
-    line-height: 50px;
-    text-align: center;
-    margin-bottom: 3vh;
-    
+#landtxt1i h1 {
+  text-align: center;
+  color: #513173;
+  font-family: Inter;
+  font-size: 47.89px;
+  font-weight: 700;
+  line-height: 50px;
+  text-align: center;
+  margin-bottom: 3vh;
 }
-#landtxt1i p{
-    font-family: Inter;
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 20px;
-    text-align: center;
-    color: #513173;
-    margin-bottom: 3vh;
-
+#landtxt1i p {
+  font-family: Inter;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 20px;
+  text-align: center;
+  color: #513173;
+  margin-bottom: 3vh;
 }
-.landinimg{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 4vh;
-    /* border: 1px solid black; */
+.landinimg {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 4vh;
+  /* border: 1px solid black; */
 }
-.landtxt2{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    margin-bottom: 6vh;
-    /* border: 1px solid black; */
+.landtxt2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 6vh;
+  /* border: 1px solid black; */
 }
-.landtxt2i{
-    /* border: 1px solid black; */
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: #513173;
+.landtxt2i {
+  /* border: 1px solid black; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #513173;
 }
- .landtxt2i h2{
-    font-family: Inter;
-    font-size: 25px;
-    font-weight: 700;
-    line-height: 38px;
-    text-align: center;
-    color: #513173;
-    margin-bottom: 2vh;
+.landtxt2i h2 {
+  font-family: Inter;
+  font-size: 25px;
+  font-weight: 700;
+  line-height: 38px;
+  text-align: center;
+  color: #513173;
+  margin-bottom: 2vh;
 }
-.landtxt2i h5{
-font-family: Inter;
-font-size: 20px;
-font-weight: 600;
-line-height: 20px;
-letter-spacing: 0.5px;
-text-align: center;  
+.landtxt2i h5 {
+  font-family: Inter;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 20px;
+  letter-spacing: 0.5px;
+  text-align: center;
 }
-.actionbtn{
-    border: 1px solid black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 40vh;
-    margin-bottom: 7vh;
+.actionbtn {
+  border: 1px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 40vh;
+  margin-bottom: 7vh;
 }
-.actionbtn1{
-    border: 1px solid black;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background: #F9FAF9;
-    width: 60%;
-    height: 100%;
-    box-shadow: 5px 5px 15px -1px rgba(0,0,0,0.75);
+.actionbtn1 {
+  border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: #f9faf9;
+  width: 60%;
+  height: 100%;
+  box-shadow: 5px 5px 15px -1px rgba(0, 0, 0, 0.75);
 }
-#btnBandS{
-    border: 1px solid black;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin-bottom: 5vh;
-    width: 37%;
-    height: 5vh;
+#btnBandS {
+  border: 1px solid black;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-bottom: 5vh;
+  width: 37%;
+  height: 5vh;
 }
-#buybox{
-    border: 1px solid black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #5D9E3A;
-    color: #F9FAF9;
-    border-radius: 5px;
-    width: 10vw;
-    height: 4vh;
-    font-family: Inter;
-    font-size: 10px;
-    font-weight: 400;
-    line-height: 24px;
-    text-align: center;
-    
+#buybox {
+  border: 1px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #5d9e3a;
+  color: #f9faf9;
+  border-radius: 5px;
+  width: 10vw;
+  height: 4vh;
+  font-family: Inter;
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: center;
 }
-#sellbox{
-    border: 1px solid black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 10vw;
-    height: 4vh;
-    font-family: Inter;
-    font-size: 10px;
-    font-weight: 400;
-    line-height: 24px;
-    text-align: center;
+#sellbox {
+  border: 1px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 10vw;
+  height: 4vh;
+  font-family: Inter;
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: center;
 }
-.petti1{
-    border: 1px solid black;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    width: 75%;
-    height: 7vh;
+.petti1 {
+  border: 1px solid black;
+  width: 75%;
+  height: 7vh;
 }
-.viewmarkbnt{
-    /* border: 1px solid black; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 7vh;
+.petti {
+  display: flex;
+  justify-content: space-between;
 }
-.viewmarkbnt1{
-    /* border: 1px solid black; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 15%; 
-    height: 10vh;
-    border-radius: 33px;
-    color: #F9FAF9;
-    background: linear-gradient(90deg, #0C0C0C 0%, #513173 100%);
+.viewmarkbnt {
+  /* border: 1px solid black; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 7vh;
 }
-.howItWorks{
-    display: flex;
-    justify-content: center;
-    width: 50vw;
-    height: 20px;
+.viewmarkbnt1 {
+  /* border: 1px solid black; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 15%;
+  height: 10vh;
+  border-radius: 33px;
+  color: #f9faf9;
+  background: linear-gradient(90deg, #0c0c0c 0%, #513173 100%);
 }
-.imgdivcont{
-    width: 20vw;
-    /* height: 40vh; */
+#howItWorks img {
+  width: 100%;
 }
-.benefitBox{
-    /* border: 1px solid black; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 60vh;
-    /* margin-bottom: 7vh; */
+.benefitBox {
+  /* border: 1px solid black; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60vh;
+  /* margin-bottom: 7vh; */
 }
-.benefitbx{
-    /* border: 1px solid black; */
-    display: flex;
-    flex-direction: column;
-    /* justify-content: center;
+.benefitbx {
+  /* border: 1px solid black; */
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center;
     align-items: center;  */
-    background: #F9FAF9;
-    width: 50%;
-    height: 60%;
+  background: #f9faf9;
+  width: 50%;
+  height: 60%;
 }
-.benefitbx h2{
-    font-family: Inter;
-    font-size: 35px;
-    font-weight: 700;
-    line-height: 40px;
-    text-align: left;
-    color: #513173;
-    margin-bottom: 7vh;
+.benefitbx h2 {
+  font-family: Inter;
+  font-size: 35px;
+  font-weight: 700;
+  line-height: 40px;
+  text-align: left;
+  color: #513173;
+  margin-bottom: 7vh;
 }
-#benefitToolsCont{
-    /* border: 1px solid black; */
-    display: flex;
-    height: 40%;
-    /* justify-content:space-between ; */
-    gap: 20px;
+#benefitToolsCont {
+  /* border: 1px solid black; */
+  display: flex;
+  height: 40%;
+  /* justify-content:space-between ; */
+  gap: 20px;
 }
-.benefittools{
-    border: 1px solid #0D4740;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    border-radius: 8px;
-    width: 25%;
-    height: 70%;
+.benefittools {
+  border: 1px solid #0d4740;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border-radius: 8px;
+  width: 25%;
+  height: 70%;
 }
-.benefittools img{
-    height: 30px;
+.benefittools img {
+  height: 30px;
 }
-.benefittools p{
-font-family: Inter;
-font-size: 15px;
-font-weight: 700;
-line-height: 20px;
-text-align: left;
-color: #513173;
+.benefittools p {
+  font-family: Inter;
+  font-size: 15px;
+  font-weight: 700;
+  line-height: 20px;
+  text-align: left;
+  color: #513173;
 }
-#starttrade{
-    border: 1px solid black;
-    height: 40vh;
-    background: #212121;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+#starttrade {
+  border: 1px solid black;
+  height: 40vh;
+  background: #212121;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.starttrade1{
-    /* border: 1px solid white; */
-    width: 50%;
-    height: 80%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.starttrade1 {
+  /* border: 1px solid white; */
+  width: 50%;
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-.starttrade1 h3{
-    font-family: Inter;
-    font-size: 32px;
-    font-weight: 700;
-    line-height: 48px;
-    text-align: center;
-    color: #513173;
+.starttrade1 h3 {
+  font-family: Inter;
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 48px;
+  text-align: center;
+  color: #513173;
 }
-.starttrade1 p{
-    font-family: Inter;
-    font-size: 12px;
-    font-weight: 200;
-    line-height: 18px;
-    text-align: center;
-    color: #FCFFFF;
-    margin-bottom: 5vh;
+.starttrade1 p {
+  font-family: Inter;
+  font-size: 12px;
+  font-weight: 200;
+  line-height: 18px;
+  text-align: center;
+  color: #fcffff;
+  margin-bottom: 5vh;
 }
-.getStarted{
-    /* border: 1px solid black; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width:20%
-    /* margin-bottom: 5vh; */
+.getStarted {
+  /* border: 1px solid black; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 20%;
+  /* margin-bottom: 5vh; */
 }
-.getStartedi{
-    /* border: 1px solid black; */
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 100%; 
-    height: 7vh;
-    border-radius: 33px;
-    /* color: #F9FAF9; */
-    background: linear-gradient(90deg, #0C0C0C 0%, #513173 100%);
+.getStartedi {
+  /* border: 1px solid black; */
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 7vh;
+  border-radius: 33px;
+  /* color: #F9FAF9; */
+  background: linear-gradient(90deg, #0c0c0c 0%, #513173 100%);
 }
-.landingcont .getStartedi Link{
-    font-family: Inter;
-    font-size: 10px;
-    font-weight: 600;
-    line-height: 10px;
-    text-align: center;
-    color: #F2F4F3;
-    text-decoration: none;
-    
+.landingcont .getStartedi Link {
+  font-family: Inter;
+  font-size: 10px;
+  font-weight: 600;
+  line-height: 10px;
+  text-align: center;
+  color: #f2f4f3;
+  text-decoration: none;
 }
 
-.landlastimg{
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    height:50vh;
-    /* margin-bottom:7vh; */
-    top: 3160.1px;
-    left: -0.35px;
-    gap: 0px;
-    opacity: 5px;
-    background-image: linear-gradient(73.33deg, #000000 14.06%, #513173 52.14%, #4790B9 67.03%, #0C0C0C 80.15%);
+.landlastimg {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+  /* margin-bottom:7vh; */
+  top: 3160.1px;
+  left: -0.35px;
+  gap: 0px;
+  opacity: 5px;
+  background-image: linear-gradient(
+    73.33deg,
+    #000000 14.06%,
+    #513173 52.14%,
+    #4790b9 67.03%,
+    #0c0c0c 80.15%
+  );
 }
-.landlastimg1{
-    /* border:1px solid white; */
-    width: 60%;
-    height: 60%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: left;
+.landlastimg1 {
+  /* border:1px solid white; */
+  width: 60%;
+  height: 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: left;
 }
-.landlastimg1 h1{
-    font-family: Inter;
-    font-size: 50px;
-    font-weight: 700;
-    line-height: 40px;
-    letter-spacing: 1px;
-    text-align: left;
-    color: #FFFDFD;
+.landlastimg1 h1 {
+  font-family: Inter;
+  font-size: 50px;
+  font-weight: 700;
+  line-height: 40px;
+  letter-spacing: 1px;
+  text-align: left;
+  color: #fffdfd;
 }
