--- a/Client/src/Pages/SignInPage/Signin.css
+++ b/Client/src/Pages/SignInPage/Signin.css
@@ -1,4 +1,14 @@
-.form {
+.container1{
+  display: flex;
+  justify-content: space-between;
+  /* align-items: center; */
+  background: #f2f2f2;
+  height: 100vh;
+  border: 4px solid black;
+}
+.container1 .form {
+  border: 4px solid black;
+  margin-top: 10vh;
   position: relative;
   display: flex;
   flex-direction: column;
