--- a/Client/src/Pages/SignInPage/Signin.css
+++ b/Client/src/Pages/SignInPage/Signin.css
@@ -4,17 +4,18 @@
   /* align-items: center; */
   background: #f2f2f2;
   height: 100vh;
-  border: 4px solid black;
+  /* border: 4px solid black; */
 }
 .container1 .form {
-  border: 4px solid black;
+  /* border: 4px solid black; */
   margin-top: 10vh;
   position: relative;
+  height: 70%;
   display: flex;
   flex-direction: column;
   border-radius: 1rem;
-  background-color: #fff;
-  color: rgb(97 97 97);
+  background-color: #f2f2f2;
+  color: rgb(44, 43, 43);
   /* box-shadow: 20px 20px 30px rgba(0, 0, 0, .05); */
   width: 22rem;
   background-clip: border-box;
