--- a/Client/src/Pages/SignInPage/Signin.css
+++ b/Client/src/Pages/SignInPage/Signin.css
@@ -83,7 +83,7 @@
   /* border: 1px solid rgba(128, 128, 128, 0.61); */
   border: 1.5px dotted #639;
   outline: 0;
-  color: whitesmoke;
+  color: rgb(44, 43, 43);
   font-weight: 400;
   font-size: .9rem;
   line-height: 1.25rem;
