--- a/Client/src/Pages/HomePage/Home.css
+++ b/Client/src/Pages/HomePage/Home.css
@@ -5,10 +5,10 @@
   }
   #homepage .homepgnavb{
     display: flex;
-    border: 1px solid black;
     align-items: center;
     justify-content: center;
     margin-bottom: 4vh;
+    /* border: 1px solid black; */
       /* flex-direction: column;
       background: black; */
       /* height: 100vh; */
@@ -17,21 +17,21 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border: 1px solid black;
-    /* height: 100vh; */
     width: 80%;
+    /* border: 1px solid black; */
+    /* height: 100vh; */
   }
   #homepage .head2cont{
     color: #639;
     display: flex;
     align-items: center;
     justify-content: center; 
-    border: 1px solid black;
     height: 5rem;
     letter-spacing: 0;
     font-weight: 600;
     font-size: 1.5rem;
     font-family: Roboto, sans-serif;
+    /* border: 1px solid black; */
     /* margin-top: -4vh;
     margin-bottom: 1vh; */
   }
@@ -40,7 +40,7 @@
     display: flex;
     align-items: center;
     justify-content: center; 
-    border: 1px solid black;
+    /* border: 1px solid black; */
     /* height: 5rem; 
     margin-top: -4vh; 
     margin-bottom: 1vh; 
@@ -63,7 +63,7 @@
     justify-content: center;
     align-items: center;
     height: 50vh;
-    width: 80%;
+    width: 100%;
     top: 3160.1px;
     left: -0.35px;
     gap: 0px;
@@ -77,7 +77,7 @@
     );
   }
   #homepage .p2pdesignbox2 {
-    border:1px solid white;
+    /* border:1px solid white; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -92,19 +92,46 @@
     color: #fffdfd;
   }
 
-
-
   #homepage .p2pdesignim1{
-    border: 1px solid white;
-    width: 10vw;
+    /* border: 1px solid white; */
+    width: 18vw;
     height: 100%;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
   }
   #homepage .p2pdesignim2{
     height: 100%;
-    border: 1px solid white;
-    width: 10vw;
+    /* border: 1px solid white; */
+    width: 18vw;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    justify-content: space-between;
+    flex-direction: column;
+    
   }
-
+  #homepage .ppplog{
+    /* border: 1px solid white; */
+    width: 30%;
+    height: 20%;
+  }
+  #homepage .ppplog2{
+    /* border: 1px solid white; */
+    width: 30%;
+    height: 20%;
+  }
+  .ppplog img{
+    width: 70px;
+    height: 60px;
+    top: 292.81px;
+  }
+  .ppplog2 img{
+    width: 190px;
+    height: 67px;
+    top: 392.81px;
+  }
 
 
 
