--- a/Client/src/Pages/HomePage/Home.css
+++ b/Client/src/Pages/HomePage/Home.css
@@ -1,175 +1,214 @@
-#homepage{
+#homepage {
   /* display: flex; */
   border: 1px solid black;
   height: 100vh;
-  }
-  #homepage .homepgnavb{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 4vh;
-    /* border: 1px solid black; */
-      /* flex-direction: column;
+}
+#homepage .homepgnavb {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 4vh;
+  /* border: 1px solid black; */
+  /* flex-direction: column;
       background: black; */
-      /* height: 100vh; */
-  }
- #homepage .navbar002{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 80%;
-    /* border: 1px solid black; */
-    /* height: 100vh; */
-  }
-  #homepage .head2cont{
-    color: #639;
-    display: flex;
-    align-items: center;
-    justify-content: center; 
-    height: 5rem;
-    letter-spacing: 0;
-    font-weight: 600;
-    font-size: 1.5rem;
-    font-family: Roboto, sans-serif;
-    /* border: 1px solid black; */
-    /* margin-top: -4vh;
+  /* height: 100vh; */
+}
+#homepage .navbar002 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 80%;
+  /* border: 1px solid black; */
+  /* height: 100vh; */
+}
+#homepage .head2cont {
+  color: #639;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 5rem;
+  letter-spacing: 0;
+  font-weight: 600;
+  font-size: 1.5rem;
+  font-family: Roboto, sans-serif;
+  /* border: 1px solid black; */
+  /* margin-top: -4vh;
     margin-bottom: 1vh; */
-  }
-  #homepage .head2conti{
-    color: #639;
-    display: flex;
-    align-items: center;
-    justify-content: center; 
-    /* border: 1px solid black; */
-    /* height: 5rem; 
+}
+#homepage .head2conti {
+  color: #639;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* border: 1px solid black; */
+  /* height: 5rem; 
     margin-top: -4vh; 
     margin-bottom: 1vh; 
     letter-spacing: 0;
     font-weight: 400;
     font-size: 1.2rem;
     font-family: Roboto, sans-serif; */
-  }
-  
-  #homepage #p2pdesignbox{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid black;
-    margin-bottom: 5vh;
-  }
-  #homepage .p2pdesignbox1{
-    border: 1px solid black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 50vh;
-    width: 100%;
-    top: 3160.1px;
-    left: -0.35px;
-    gap: 0px;
-    opacity: 5px;
-    background-image: linear-gradient(
-      73.33deg,
-      #000000 14.06%,
-      #513173 52.14%,
-      #4790b9 67.03%,
-      #0c0c0c 80.15%
-    );
-  }
-  #homepage .p2pdesignbox2 {
-    /* border:1px solid white; */
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  #homepage .p2pdesignbox2 h1 {
-    font-family: Inter;
-    font-size: 40px;
-    font-weight: 500;
-    line-height: 35px;
-    letter-spacing: 1px;
-    color: #fffdfd;
-  }
+}
 
-  #homepage .p2pdesignim1{
-    /* border: 1px solid white; */
-    width: 18vw;
-    height: 100%;
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
-    align-items: center;
-  }
-  #homepage .p2pdesignim2{
-    height: 100%;
-    /* border: 1px solid white; */
-    width: 18vw;
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
-    justify-content: space-between;
-    flex-direction: column;
-    
-  }
-  #homepage .ppplog{
-    /* border: 1px solid white; */
-    width: 30%;
-    height: 20%;
-  }
-  #homepage .ppplog2{
-    /* border: 1px solid white; */
-    width: 30%;
-    height: 20%;
-  }
-  .ppplog img{
-    width: 70px;
-    height: 60px;
-    top: 292.81px;
-  }
-  .ppplog2 img{
-    width: 190px;
-    height: 67px;
-    top: 392.81px;
-  }
+#homepage #p2pdesignbox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid black;
+  margin-bottom: 5vh;
+  overflow-x: hidden;
+}
+#homepage .p2pdesignbox1 {
+  border: 1px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+  width: 100%;
+  top: 3160.1px;
+  left: -0.35px;
+  gap: 0px;
+  opacity: 5px;
+  background-image: linear-gradient(
+    73.33deg,
+    #000000 14.06%,
+    #513173 52.14%,
+    #4790b9 67.03%,
+    #0c0c0c 80.15%
+  );
+}
+#homepage .p2pdesignbox2 {
+  /* border:1px solid white; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#homepage .p2pdesignbox2 h1 {
+  font-family: Inter;
+  font-size: 40px;
+  font-weight: 500;
+  line-height: 35px;
+  letter-spacing: 1px;
+  color: #fffdfd;
+}
 
+#homepage .p2pdesignim1 {
+  /* border: 1px solid white; */
+  width: 18vw;
+  height: 100%;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  align-items: center;
+}
+#homepage .p2pdesignim2 {
+  height: 100%;
+  /* border: 1px solid white; */
+  width: 18vw;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  justify-content: space-between;
+  flex-direction: column;
+}
+#homepage .ppplog {
+  /* border: 1px solid white; */
+  width: 30%;
+  height: 20%;
+}
+#homepage .ppplog2 {
+  /* border: 1px solid white; */
+  width: 30%;
+  height: 20%;
+}
+.ppplog img {
+  width: 70px;
+  height: 60px;
+  top: 292.81px;
+}
+.ppplog2 img {
+  width: 190px;
+  height: 67px;
+  top: 392.81px;
+}
 
+#homepage .prod {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* width: 90%; */
+  color: #639;
+  border: 1px solid black;
+}
+#homepage #bandS {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  gap: 3px;
+  border: 1px solid black;
+}
+#homepage .bandsbtn {
+  border: 1px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 10vw;
+  height: 4vh;
+  font-family: Inter;
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: center;
+}
+#homepage .bandsbtn:focus {
+  border-bottom: 1px solid #639;
+}
 
+.tab-container {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  position: relative;
+  padding: 2px;
+  background-color: #ebebec;
+  border-radius: 9px;
+  margin: 10px 20px 0px 20px;
+  /* width: 100vw; */
+}
 
+.indicator {
+  content: "";
+  width: 50%;
+  height: 28px;
+  background: #ffffff;
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  z-index: 9;
+  border: 0.5px solid rgba(0, 0, 0, 0.04);
+  box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.12), 0px 3px 1px rgba(0, 0, 0, 0.04);
+  border-radius: 7px;
+  transition: all 0.2s ease-out;
+}
 
-
-
-  #homepage .prod{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    /* width: 90%; */
-    color: #639;
-    border: 1px solid black;
-  }
-  #homepage #bandS{
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    gap: 3px;
-    border: 1px solid black;
-  }
-  #homepage .bandsbtn{
-    border: 1px solid black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 10vw;
-    height: 4vh;
-    font-family: Inter;
-    font-size: 10px;
-    font-weight: 400;
-    line-height: 24px;
-    text-align: center;
-  }
-  #homepage .bandsbtn:focus{
-    border-bottom: 1px solid #639;
-  }
-
-
-  
+.tab {
+  width: 50%;
+  height: 28px;
+  position: relative;
+  z-index: 99;
+  background-color: transparent;
+  border: 0;
+  outline: none;
+  flex: none;
+  align-self: stretch;
+  flex-grow: 1;
+  cursor: pointer;
+  font-weight: 500;
+}
+.left {
+  left: 2px;
+}
+.right {
+  left: calc(50% - 2px);
+}
