--- a/Client/src/Component/Buy.css
+++ b/Client/src/Component/Buy.css
@@ -1,10 +1,61 @@
-.buycont{
+.buycontainer{
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     justify-content: center;
+    flex-direction: column;
     height: 100vh;
+    /* border: 1px soli d #333; */
 }
-.buyform {
+.orders{
+  margin-top: 10vh;
+  /* border: 1px solid #333; */
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
+  height: 20vh;
+  background: rgb(243, 241, 241);
+  
+}
+#propcomp p{
+  font-family: Inter;
+  font-size: 17px;
+  font-weight: 300;
+  line-height: 20px;
+  letter-spacing: 0px;
+}
+#propcomp span{
+  font-family: Inter;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 31px;
+}
+.bnkline{
+  display: flex;
+}
+#propcomp #thickmk{
+  border: 1px solid green;
+  width: 2px;
+  height: 13px;
+  background-color: green;
+}
+.buybtt button{
+  padding: 1vh 2vw;
+  border-radius: 20px;
+  color: aliceblue;
+  background-color: green;
+  font-family: Inter;
+  font-size: 17px;
+  font-weight: 600;
+  line-height: 25px;
+}
+
+
+
+
+
+
+/* .buyform {
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -14,7 +65,6 @@
     position: relative;
     background-color: #1a1a1a;
     color: #fff;
-    border: 1px solid #333;
   }
   .buyform .flex {
     display: flex;
@@ -96,7 +146,7 @@
     font-weight: 600;
     color: #639;
     margin: auto 0 auto auto;
-  }
+  } */
 
 /* .buyform  .signin {
   font-size: 14.5px;
