--- a/Client/src/Pages/HomePage/Home.css
+++ b/Client/src/Pages/HomePage/Home.css
@@ -23,7 +23,7 @@
   color: #639;
   display: flex;
   width: 15%;
-  flex-direction: column;
+  /* flex-direction: column; */
   letter-spacing: 0;
   font-weight: 600;
   right: 0%;
@@ -32,12 +32,6 @@
   font-family: Roboto, sans-serif;
   position: absolute;
 } 
-#homepage #body{
-  position: relative;
-  display: flex;
-  margin-top: 15%;
-
-}
 #homepage .dropdown{
   display: flex;
   background-image: linear-gradient(
@@ -51,10 +45,11 @@
   height:100% ;
   color: white;
   margin-top: 3%;
-  font-size: small;
+  font-size: 20px;
+  font-weight: 600;
   position: relative;
   margin-bottom: 5px;
-  gap: 5vh;
+  gap: 3vh;
   align-items: center;
 }
 #homepage .dropdown-content{
@@ -81,6 +76,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
+}
+#homepage #body{
+  position: relative;
+  display: flex;
+  margin-top: 15%;
+  flex-direction: column;
 
 }
 
