--- a/Client/src/Pages/HomePage/Home.css
+++ b/Client/src/Pages/HomePage/Home.css
@@ -8,7 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 4vh; 
+  /* margin-bottom: 4vh;  */
 
 
 }
@@ -81,7 +81,7 @@
 #homepage #body{
   position: relative;
   display: flex;
-  margin-top: 15%;
+  margin-top: 7%;
   flex-direction: column;
 
 }
