--- a/Client/src/Component/Buy.css
+++ b/Client/src/Component/Buy.css
@@ -1,12 +1,12 @@
-.buycontainer{
-    display: flex;
-    align-items: center;
-    /* justify-content: center; */
-    flex-direction: column;
-    height: 100vh;
-    /* border: 1px soli d #333; */
+.buycontainer {
+  display: flex;
+  align-items: center;
+  /* justify-content: center; */
+  flex-direction: column;
+  height: 100vh;
+  /* border: 1px soli d #333; */
 }
-.orders{
+.orders {
   margin-top: 5vh;
   /* border: 1px solid #333; */
   display: flex;
@@ -15,31 +15,30 @@
   width: 100%;
   height: 20vh;
   background: rgb(243, 241, 241);
-  
 }
-#propcomp p{
+#propcomp p {
   font-family: Inter;
   font-size: 17px;
   font-weight: 300;
   line-height: 20px;
   letter-spacing: 0px;
 }
-#propcomp span{
+#propcomp span {
   font-family: Inter;
   font-size: 20px;
   font-weight: 600;
   line-height: 31px;
 }
-.bnkline{
+.bnkline {
   display: flex;
 }
-#propcomp #thickmk{
+#propcomp #thickmk {
   border: 1px solid green;
   width: 2px;
   height: 13px;
   background-color: green;
 }
-.buybtt button{
+.buybtt button {
   padding: 1vh 2vw;
   border-radius: 20px;
   color: aliceblue;
@@ -50,10 +49,23 @@
   line-height: 25px;
 }
 
-
-
-
-
+#buyComponent .popup {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 100;
+  color: #fff;
+}
+#buyComponent .popup > div {
+  background-color: black;
+}
 
 /* .buyform {
     display: flex;
@@ -166,8 +178,7 @@
 }
  */
 
- 
-  /* .checkout .footer {
+/* .checkout .footer {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -181,8 +192,8 @@
     color: #2B2B2F;
     font-weight: 900;
   } */
-  
-  /* .checkout .checkout-btn {
+
+/* .checkout .checkout-btn {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -200,7 +211,6 @@
     font-weight: 600;
     transition: all 0.3s cubic-bezier(0.15, 0.83, 0.66, 1);
   }  */
-
 
 /* .submit {
   border: none;
